@@ -15,4 +15,5 @@ Patches:
   * Hannes Rist (:set titlestring support)
   * Nikolai Weibull ($VIMPERATOR_HOME)
   * Joseph Xu (supporting multiple top level windows better)
+  * Raimon Grau Cusc'o (document relationship navigation - ]n, ]p)
 </pre>
