@@ -414,6 +414,22 @@ vimperator.Mappings = function () //{{{
             flags: vimperator.Mappings.flags.COUNT
         }
     ));
+    addDefaultMap(new vimperator.Map([vimperator.modes.NORMAL], ["]n"],
+        function (count) {vimperator.buffer.followDocumentRelation("next");},
+        {
+            short_help: "go to 'next' or '>' if it exists.  Beep otherwise.",
+            help: "Opens link labeled with next or >.  Useful when browsing forums or documentation.  Change nextpattern to modify its behaviour.  It follows relations between files too.",
+            flags: vimperator.Mappings.flags.COUNT
+        }
+    ));
+    addDefaultMap(new vimperator.Map([vimperator.modes.NORMAL], ["]p"],
+        function (count) {vimperator.buffer.followDocumentRelation("previous");},
+        {
+            short_help: "go to 'prev', 'previous' or '<' if it exists.  Beep otherwise.",
+            help: "Opens link labeled with prev, previous or <.  Useful when browsing forums or documentation.  Change nextpattern to modify its behaviour.  It follows relations between files too.",
+            flags: vimperator.Mappings.flags.COUNT
+        }
+    ));
     addDefaultMap(new vimperator.Map([vimperator.modes.NORMAL], ["b"],
         function () { vimperator.commandline.open(":", "buffer! ", vimperator.modes.EX); },
         {
